Reprezentowanie liczb w różnych typach

--- a/wieloczynnikowa_reg_lin.ipynb
+++ b/wieloczynnikowa_reg_lin.ipynb
@@ -2,8 +2,186 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        [,1]\n",
+      "   30.912131\n",
+      "x1  4.369448\n",
+      "x2  0.063614\n",
+      "[1] \"round:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>31</li>\n",
+       "\t<li>4</li>\n",
+       "\t<li>0</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 31\n",
+       "\\item 4\n",
+       "\\item 0\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 31\n",
+       "2. 4\n",
+       "3. 0\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 31  4  0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"z użyciem biblioteki Rmpfr:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'mpfrMatrix' of dim(.) =  (3, 1) of precision  128   bits \n",
+       "   [,1]                                       \n",
+       "     30.91213067342200560005949228070676326752\n",
+       "x1   4.369447961519718148792890133336186408997\n",
+       "x2 0.06361400494390001547628799016820266842842"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'mpfrMatrix' of dim(.) =  (3, 1) of precision  333   bits \n",
+       "   [,1]                                                                                                     \n",
+       "     30.9121306734220056000594922807067632675170898437500000000000000000000000000000000000000000000000000000\n",
+       "x1   4.36944796151971814879289013333618640899658203125000000000000000000000000000000000000000000000000000000\n",
+       "x2 0.0636140049439000154762879901682026684284210205078125000000000000000000000000000000000000000000000000000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"przyrównanie do wbudowanej funkcji lm:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row></th><td>FALSE</td></tr>\n",
+       "\t<tr><th scope=row>x1</th><td>FALSE</td></tr>\n",
+       "\t<tr><th scope=row>x2</th><td>FALSE</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|l}\n",
+       "\t & FALSE\\\\\n",
+       "\tx1 & FALSE\\\\\n",
+       "\tx2 & FALSE\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "|  | FALSE |\n",
+       "| x1 | FALSE |\n",
+       "| x2 | FALSE |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   [,1] \n",
+       "   FALSE\n",
+       "x1 FALSE\n",
+       "x2 FALSE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"float:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "# A float32 matrix: 3x1\n",
+       "        [,1]\n",
+       "   30.912130\n",
+       "x1  4.369448\n",
+       "x2  0.063614"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "library(Rmpfr)\n",
+    "library(float)\n",
+    "\n",
+    "genomes=read.csv(\"genomes.csv\")\n",
+    "genomes$temperature[is.na(genomes$temperature)] = 0\n",
+    "\n",
+    "d = lm(genomes$GC ~ genomes$size + genomes$temperature)\n",
+    "\n",
+    "y = genomes$GC\n",
+    "x1 = genomes$size\n",
+    "x2 = genomes$temperature\n",
+    "\n",
+    "estim = function(x1,x2,y){\n",
+    "    Y = as.matrix(y);\n",
+    "    X = as.matrix(cbind(1,x1,x2));\n",
+    "    beta = solve(t(X) %*% X) %*% (t(X) %*% Y)\n",
+    "    return (beta)\n",
+    "}\n",
+    "\n",
+    "estim = estim(x1,x2,y)\n",
+    "print(estim)\n",
+    "\n",
+    "print('round:')\n",
+    "round(as.numeric(estim))\n",
+    "print('z użyciem biblioteki Rmpfr:')\n",
+    "mpfr(estim, 128)\n",
+    "mpfr(estim, 333)\n",
+    "print('przyrównanie do wbudowanej funkcji lm:')\n",
+    "estim == d$coeff\n",
+    "print('float:')\n",
+    "fl(estim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -101,41 +279,6 @@
     "\n",
     "d = lm(dt$GC ~ dt$size + dt$temperature)\n",
     "summary(d)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        [,1]\n",
-      "   30.912131\n",
-      "x1  4.369448\n",
-      "x2  0.063614\n"
-     ]
-    }
-   ],
-   "source": [
-    "genomes=read.csv(\"genomes.csv\")\n",
-    "genomes$temperature[is.na(genomes$temperature)] = 0\n",
-    "\n",
-    "y = genomes$GC\n",
-    "x1 = genomes$size\n",
-    "x2 = genomes$temperature\n",
-    "\n",
-    "estim = function(x1,x2,y){\n",
-    "    Y = as.matrix(y);\n",
-    "    X = as.matrix(cbind(1,x1,x2));\n",
-    "    beta = solve(t(X) %*% X) %*% (t(X) %*% Y)\n",
-    "    return (beta)\n",
-    "}\n",
-    "\n",
-    "estim = estim(x1,x2,y)\n",
-    "print(estim)"
    ]
   },
   {
