Reprezentowanie liczb w różnych typach w regrsji liniowej w R

--- a/lin_regresja.ipynb
+++ b/lin_regresja.ipynb
@@ -2,68 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<thead><tr><th scope=col>organism</th><th scope=col>group</th><th scope=col>size</th><th scope=col>GC</th><th scope=col>habitat</th><th scope=col>temp.group</th><th scope=col>temperature</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>Acaryochloris marina MBIC11017           </td><td>Cyanobacteria                            </td><td>8.36                                     </td><td>47.0                                     </td><td>Aquatic                                  </td><td>Mesophilic                               </td><td>NA                                       </td></tr>\n",
-       "\t<tr><td>Acholeplasma laidlawii PG-8A             </td><td>Firmicutes                               </td><td>1.50                                     </td><td>31.9                                     </td><td>Specialized                              </td><td>Mesophilic                               </td><td>37                                       </td></tr>\n",
-       "\t<tr><td>Acidiphilium cryptum JF-5                </td><td>Alphaproteobacteria                      </td><td>3.97                                     </td><td>67.1                                     </td><td>Multiple                                 </td><td>Mesophilic                               </td><td>35                                       </td></tr>\n",
-       "\t<tr><td>Acidithiobacillus ferrooxidans ATCC 53993</td><td>Other Bacteria                           </td><td>2.90                                     </td><td>58.9                                     </td><td>Specialized                              </td><td>Mesophilic                               </td><td>NA                                       </td></tr>\n",
-       "\t<tr><td>Acidothermus cellulolyticus 11B          </td><td>Actinobacteria                           </td><td>2.40                                     </td><td>66.9                                     </td><td>Aquatic                                  </td><td>Thermophilic                             </td><td>58                                       </td></tr>\n",
-       "\t<tr><td>Acidovorax avenae subsp. citrulli AAC00-1</td><td>Betaproteobacteria                       </td><td>5.40                                     </td><td>68.5                                     </td><td>Multiple                                 </td><td>Mesophilic                               </td><td>NA                                       </td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|lllllll}\n",
-       " organism & group & size & GC & habitat & temp.group & temperature\\\\\n",
-       "\\hline\n",
-       "\t Acaryochloris marina MBIC11017            & Cyanobacteria                             & 8.36                                      & 47.0                                      & Aquatic                                   & Mesophilic                                & NA                                       \\\\\n",
-       "\t Acholeplasma laidlawii PG-8A              & Firmicutes                                & 1.50                                      & 31.9                                      & Specialized                               & Mesophilic                                & 37                                       \\\\\n",
-       "\t Acidiphilium cryptum JF-5                 & Alphaproteobacteria                       & 3.97                                      & 67.1                                      & Multiple                                  & Mesophilic                                & 35                                       \\\\\n",
-       "\t Acidithiobacillus ferrooxidans ATCC 53993 & Other Bacteria                            & 2.90                                      & 58.9                                      & Specialized                               & Mesophilic                                & NA                                       \\\\\n",
-       "\t Acidothermus cellulolyticus 11B           & Actinobacteria                            & 2.40                                      & 66.9                                      & Aquatic                                   & Thermophilic                              & 58                                       \\\\\n",
-       "\t Acidovorax avenae subsp. citrulli AAC00-1 & Betaproteobacteria                        & 5.40                                      & 68.5                                      & Multiple                                  & Mesophilic                                & NA                                       \\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "| organism | group | size | GC | habitat | temp.group | temperature |\n",
-       "|---|---|---|---|---|---|---|\n",
-       "| Acaryochloris marina MBIC11017            | Cyanobacteria                             | 8.36                                      | 47.0                                      | Aquatic                                   | Mesophilic                                | NA                                        |\n",
-       "| Acholeplasma laidlawii PG-8A              | Firmicutes                                | 1.50                                      | 31.9                                      | Specialized                               | Mesophilic                                | 37                                        |\n",
-       "| Acidiphilium cryptum JF-5                 | Alphaproteobacteria                       | 3.97                                      | 67.1                                      | Multiple                                  | Mesophilic                                | 35                                        |\n",
-       "| Acidithiobacillus ferrooxidans ATCC 53993 | Other Bacteria                            | 2.90                                      | 58.9                                      | Specialized                               | Mesophilic                                | NA                                        |\n",
-       "| Acidothermus cellulolyticus 11B           | Actinobacteria                            | 2.40                                      | 66.9                                      | Aquatic                                   | Thermophilic                              | 58                                        |\n",
-       "| Acidovorax avenae subsp. citrulli AAC00-1 | Betaproteobacteria                        | 5.40                                      | 68.5                                      | Multiple                                  | Mesophilic                                | NA                                        |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  organism                                  group               size GC  \n",
-       "1 Acaryochloris marina MBIC11017            Cyanobacteria       8.36 47.0\n",
-       "2 Acholeplasma laidlawii PG-8A              Firmicutes          1.50 31.9\n",
-       "3 Acidiphilium cryptum JF-5                 Alphaproteobacteria 3.97 67.1\n",
-       "4 Acidithiobacillus ferrooxidans ATCC 53993 Other Bacteria      2.90 58.9\n",
-       "5 Acidothermus cellulolyticus 11B           Actinobacteria      2.40 66.9\n",
-       "6 Acidovorax avenae subsp. citrulli AAC00-1 Betaproteobacteria  5.40 68.5\n",
-       "  habitat     temp.group   temperature\n",
-       "1 Aquatic     Mesophilic   NA         \n",
-       "2 Specialized Mesophilic   37         \n",
-       "3 Multiple    Mesophilic   35         \n",
-       "4 Specialized Mesophilic   NA         \n",
-       "5 Aquatic     Thermophilic 58         \n",
-       "6 Multiple    Mesophilic   NA         "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -84,6 +25,101 @@
       ],
       "text/plain": [
        "[1] 4.252881"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"round:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "4"
+      ],
+      "text/latex": [
+       "4"
+      ],
+      "text/markdown": [
+       "4"
+      ],
+      "text/plain": [
+       "[1] 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"przyrównanie do wbudowanej funkcji lm:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<strong>genomes$size:</strong> FALSE"
+      ],
+      "text/latex": [
+       "\\textbf{genomes\\textbackslash{}\\$size:} FALSE"
+      ],
+      "text/markdown": [
+       "**genomes$size:** FALSE"
+      ],
+      "text/plain": [
+       "genomes$size \n",
+       "       FALSE "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"z użyciem biblioteki Rmpfr:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1 'mpfr' number of precision  128   bits \n",
+       "[1] 4.252880674352681467098591383546590805054"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1 'mpfr' number of precision  333   bits \n",
+       "[1] 4.2528806743526814670985913835465908050537109375"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"float\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "# A float32 vector: 1\n",
+       "[1] 4.2529"
       ]
      },
      "metadata": {},
@@ -118,22 +154,92 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] \"my_r2:\"\n"
+      "[1] \"round:\"\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "0.375482150501539"
+       "33"
       ],
       "text/latex": [
-       "0.375482150501539"
+       "33"
       ],
       "text/markdown": [
-       "0.375482150501539"
+       "33"
       ],
       "text/plain": [
-       "[1] 0.3754822"
+       "[1] 33"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"comprassion with lm function:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<strong>(Intercept):</strong> FALSE"
+      ],
+      "text/latex": [
+       "\\textbf{(Intercept):} FALSE"
+      ],
+      "text/markdown": [
+       "**(Intercept):** FALSE"
+      ],
+      "text/plain": [
+       "(Intercept) \n",
+       "      FALSE "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"z użyciem biblioteki Rmpfr:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1 'mpfr' number of precision  128   bits \n",
+       "[1] 32.68246972988583110009130905382335186005"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1 'mpfr' number of precision  333   bits \n",
+       "[1] 32.68246972988583110009130905382335186004638671875"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"float\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "# A float32 vector: 1\n",
+       "[1] 32.682"
       ]
      },
      "metadata": {},
@@ -141,8 +247,12 @@
     }
    ],
    "source": [
+    "library(Rmpfr)\n",
+    "library(float)\n",
+    "\n",
     "genomes=read.csv(\"genomes.csv\")\n",
-    "head(genomes)\n",
+    "z = lm(genomes$GC ~ genomes$size)\n",
+    "#head(genomes)\n",
     "y=genomes$GC\n",
     "x=genomes$size\n",
     "s = function(x, y){\n",
@@ -170,10 +280,29 @@
     "my_R2 = R2(x,y)\n",
     "print('my_size:')\n",
     "my_size\n",
+    "print('round:')\n",
+    "round(as.numeric(my_size))\n",
+    "print('przyrównanie do wbudowanej funkcji lm:')\n",
+    "my_size == z$coef[2]\n",
+    "print('z użyciem biblioteki Rmpfr:')\n",
+    "mpfr(my_size, 128)\n",
+    "mpfr(my_size, 333)\n",
+    "print('float')\n",
+    "fl(my_size)\n",
     "print('my_intercept:')\n",
     "my_intercept\n",
-    "print('my_r2:')\n",
-    "my_R2"
+    "print('round:')\n",
+    "round(as.numeric(my_intercept))\n",
+    "print('comprassion with lm function:')\n",
+    "my_intercept == z$coef[1]\n",
+    "print('z użyciem biblioteki Rmpfr:')\n",
+    "mpfr(my_intercept, 128)\n",
+    "mpfr(my_intercept, 333)\n",
+    "print('float')\n",
+    "fl(my_intercept)\n",
+    "\n",
+    "#print('my_r2:')\n",
+    "#my_R2"
    ]
   },
   {
