Reprezentowanie liczb w różnych typach w regrsji liniowej w python

--- a/lin_reg.ipynb
+++ b/lin_reg.ipynb
@@ -9,14 +9,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b0 : 32.68246972988583, b1: 4.252880674352682\n"
+      "b0:32.682469729885746, b1:4.252880674352686\n",
+      "Zaokrąglony wynik b0: 33.0\n",
+      "Zaokrąglony wynik b0: 4.0\n",
+      "Zaokrąglony wyniku do dwóch miejsc po przecinku: 32.68\n",
+      "Zaokrąglony wyniku do dwóch miejsc po przecinku: 4.25\n",
+      "Korzystanie z moduły decimal b0: 32.68246972988574583496301784180104732513427734375\n",
+      "Korzystanie z moduły decimal b1: 4.25288067435268590799068988417275249958038330078125\n",
+      "Z użyciem mpmath(mpf) b0: 32.68246972988574583496301784180104732513427734375\n",
+      "Z użyciem mpmath(mpc) b0: (32.68246972988574583496301784180104732513427734375 + 0.0j)\n",
+      "Z użyciem mpmath(mpf) b1: 4.2528806743526859079906898841727524995803833007813\n",
+      "Z użyciem mpmath(mpc) b1: (4.2528806743526859079906898841727524995803833007813 + 0.0j)\n",
+      "Z użyciem mpfr dla b0: 32.682469729885746\n",
+      "Z użyciem mpfr dla b1: 4.2528806743526859\n",
+      "Z użyciem mpfr ze zmianą precyzji dla b0: 32.68246972988574583496301784180104732513427734375\n",
+      "Z użyciem mpfr ze zmianą precyzji dla b1: 4.25288067435268590799068988417275249958038330078125\n"
      ]
     }
    ],
@@ -50,7 +64,36 @@
     "    return [b0, b1]\n",
     "\n",
     "z = coefficients(data,x,y)\n",
-    "print(f'b0 : {b0}, b1: {b1}')"
+    "print(f'b0:{z[0]}, b1:{z[1]}')\n",
+    "\n",
+    "print('Zaokrąglony wynik b0:',round(z[0]))\n",
+    "print('Zaokrąglony wynik b0:',round(z[1]))\n",
+    "\n",
+    "print('Zaokrąglony wyniku do dwóch miejsc po przecinku:',format(z[0],\".2f\"))\n",
+    "print('Zaokrąglony wyniku do dwóch miejsc po przecinku:',format(z[1],\".2f\"))\n",
+    "\n",
+    "\n",
+    "from decimal import *\n",
+    "print('Korzystanie z moduły decimal b0:',Decimal(z[0]))\n",
+    "print('Korzystanie z moduły decimal b1:',Decimal(z[1]))\n",
+    "\n",
+    "\n",
+    "from mpmath import *\n",
+    "\n",
+    "mp.dps = 50\n",
+    "print('Z użyciem mpmath(mpf) b0:',mpf(z[0]))\n",
+    "print('Z użyciem mpmath(mpc) b0:',mpc(z[0]))\n",
+    "print('Z użyciem mpmath(mpf) b1:',mpf(z[1]))\n",
+    "print('Z użyciem mpmath(mpc) b1:',mpc(z[1]))\n",
+    "\n",
+    "import gmpy2\n",
+    "from gmpy2 import mpfr\n",
+    "print('Z użyciem mpfr dla b0:',mpfr(z[0]))\n",
+    "print('Z użyciem mpfr dla b1:',mpfr(z[1]))\n",
+    "\n",
+    "gmpy2.get_context().precision=333\n",
+    "print('Z użyciem mpfr ze zmianą precyzji dla b0:',mpfr(z[0]))\n",
+    "print('Z użyciem mpfr ze zmianą precyzji dla b1:',mpfr(z[1]))"
    ]
   },
   {
@@ -133,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
