--- a/lin_reg.ipynb
+++ b/lin_reg.ipynb
@@ -9,38 +9,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b0:32.682469729885746, b1:4.252880674352686\n",
-      "Zaokrąglony wynik b0: 33.0\n",
-      "Zaokrąglony wynik b0: 4.0\n",
-      "Zaokrąglony wyniku do dwóch miejsc po przecinku: 32.68\n",
-      "Zaokrąglony wyniku do dwóch miejsc po przecinku: 4.25\n",
-      "Korzystanie z moduły decimal b0: 32.68246972988574583496301784180104732513427734375\n",
-      "Korzystanie z moduły decimal b1: 4.25288067435268590799068988417275249958038330078125\n",
-      "Z użyciem mpmath(mpf) b0: 32.68246972988574583496301784180104732513427734375\n",
-      "Z użyciem mpmath(mpc) b0: (32.68246972988574583496301784180104732513427734375 + 0.0j)\n",
-      "Z użyciem mpmath(mpf) b1: 4.2528806743526859079906898841727524995803833007813\n",
-      "Z użyciem mpmath(mpc) b1: (4.2528806743526859079906898841727524995803833007813 + 0.0j)\n",
-      "Z użyciem mpfr dla b0: 32.682469729885746\n",
-      "Z użyciem mpfr dla b1: 4.2528806743526859\n",
-      "Z użyciem mpfr ze zmianą precyzji dla b0: 32.68246972988574583496301784180104732513427734375\n",
-      "Z użyciem mpfr ze zmianą precyzji dla b1: 4.25288067435268590799068988417275249958038330078125\n"
+      "b0:350431975154361.1, b1:9099230808282.246\n",
+      "Zaokrąglony wynik b0: 350431975154361.0\n",
+      "Zaokrąglony wynik b0: 9099230808282.0\n",
+      "Zaokrąglony wyniku do dwóch miejsc po przecinku: 350431975154361.12\n",
+      "Zaokrąglony wyniku do dwóch miejsc po przecinku: 9099230808282.25\n",
+      "Korzystanie z moduły decimal b0: 350431975154361.125\n",
+      "Korzystanie z moduły decimal b1: 9099230808282.24609375\n",
+      "Z użyciem mpmath(mpf) b0: 350431975154361.125\n",
+      "Z użyciem mpmath(mpc) b0: (350431975154361.125 + 0.0j)\n",
+      "Z użyciem mpmath(mpf) b1: 9099230808282.24609375\n",
+      "Z użyciem mpmath(mpc) b1: (9099230808282.24609375 + 0.0j)\n",
+      "Z użyciem mpfr dla b0: 350431975154361.125\n",
+      "Z użyciem mpfr dla b1: 9099230808282.24609375\n",
+      "Z użyciem mpfr ze zmianą precyzji dla b0: 350431975154361.125\n",
+      "Z użyciem mpfr ze zmianą precyzji dla b1: 9099230808282.24609375\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
     "\n",
     "data = pd.read_csv('genomes.csv')\n",
     "\n",
     "x = data['size'].values\n",
-    "y = data['GC'].values\n",
+    "y1 = data['GC'].values\n",
+    "\n",
+    "y = np.log(y1)\n",
     "\n",
     "def mean(values):\n",
     "    return sum(values) / float(len(values))\n",
@@ -64,36 +70,54 @@
     "    return [b0, b1]\n",
     "\n",
     "z = coefficients(data,x,y)\n",
-    "print(f'b0:{z[0]}, b1:{z[1]}')\n",
     "\n",
-    "print('Zaokrąglony wynik b0:',round(z[0]))\n",
-    "print('Zaokrąglony wynik b0:',round(z[1]))\n",
+    "def convert(x):\n",
+    "    c=x*(10**14)\n",
+    "    return c\n",
     "\n",
-    "print('Zaokrąglony wyniku do dwóch miejsc po przecinku:',format(z[0],\".2f\"))\n",
-    "print('Zaokrąglony wyniku do dwóch miejsc po przecinku:',format(z[1],\".2f\"))\n",
+    "a = convert(z[0])\n",
+    "b = convert(z[1])\n",
+    "print(f'b0:{a}, b1:{b}')\n",
+    "\n",
+    "print('Zaokrąglony wynik b0:',round(a))\n",
+    "print('Zaokrąglony wynik b0:',round(b))\n",
+    "\n",
+    "print('Zaokrąglony wyniku do dwóch miejsc po przecinku:',format(a,\".2f\"))\n",
+    "print('Zaokrąglony wyniku do dwóch miejsc po przecinku:',format(b,\".2f\"))\n",
     "\n",
     "\n",
     "from decimal import *\n",
-    "print('Korzystanie z moduły decimal b0:',Decimal(z[0]))\n",
-    "print('Korzystanie z moduły decimal b1:',Decimal(z[1]))\n",
+    "print('Korzystanie z moduły decimal b0:',Decimal(a))\n",
+    "print('Korzystanie z moduły decimal b1:',Decimal(b))\n",
     "\n",
     "\n",
     "from mpmath import *\n",
     "\n",
     "mp.dps = 50\n",
-    "print('Z użyciem mpmath(mpf) b0:',mpf(z[0]))\n",
-    "print('Z użyciem mpmath(mpc) b0:',mpc(z[0]))\n",
-    "print('Z użyciem mpmath(mpf) b1:',mpf(z[1]))\n",
-    "print('Z użyciem mpmath(mpc) b1:',mpc(z[1]))\n",
+    "print('Z użyciem mpmath(mpf) b0:',mpf(a))\n",
+    "print('Z użyciem mpmath(mpc) b0:',mpc(a))\n",
+    "print('Z użyciem mpmath(mpf) b1:',mpf(b))\n",
+    "print('Z użyciem mpmath(mpc) b1:',mpc(b))\n",
     "\n",
     "import gmpy2\n",
     "from gmpy2 import mpfr\n",
-    "print('Z użyciem mpfr dla b0:',mpfr(z[0]))\n",
-    "print('Z użyciem mpfr dla b1:',mpfr(z[1]))\n",
+    "print('Z użyciem mpfr dla b0:',mpfr(a))\n",
+    "print('Z użyciem mpfr dla b1:',mpfr(b))\n",
     "\n",
     "gmpy2.get_context().precision=333\n",
-    "print('Z użyciem mpfr ze zmianą precyzji dla b0:',mpfr(z[0]))\n",
-    "print('Z użyciem mpfr ze zmianą precyzji dla b1:',mpfr(z[1]))"
+    "print('Z użyciem mpfr ze zmianą precyzji dla b0:',mpfr(a))\n",
+    "print('Z użyciem mpfr ze zmianą precyzji dla b1:',mpfr(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wartość estymatora największa jest dla funkcji mpf z biblioteki mpmath,z użyciem funkcji mpfr oraz decimal,wynosi  dla b0:350431975154361.125 oraz dla b1: 9099230808282.24609375\n",
+    "\n",
+    "Wartość estymatora najmniejsza jest dla powyższego kodu bez wbudowanych funkcji,wynosi dla b0: 350431975154361.1         oraz dla b1: 9099230808282.246 \n",
+    "\n",
+    "Różnice pomiędzy wartościami: polegają na zaokrąglaniu liczb,użyte funkcje są bardziej precyzyjne.\n"
    ]
   },
   {
