--- a/lin_regresja.ipynb
+++ b/lin_regresja.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -15,16 +15,16 @@
     {
      "data": {
       "text/html": [
-       "4.25288067435268"
+       "0.0909923080828226"
       ],
       "text/latex": [
-       "4.25288067435268"
+       "0.0909923080828226"
       ],
       "text/markdown": [
-       "4.25288067435268"
+       "0.0909923080828226"
       ],
       "text/plain": [
-       "[1] 4.252881"
+       "[1] 0.09099231"
       ]
      },
      "metadata": {},
@@ -40,16 +40,16 @@
     {
      "data": {
       "text/html": [
-       "4"
+       "0"
       ],
       "text/latex": [
-       "4"
+       "0"
       ],
       "text/markdown": [
-       "4"
+       "0"
       ],
       "text/plain": [
-       "[1] 4"
+       "[1] 0"
       ]
      },
      "metadata": {},
@@ -92,7 +92,7 @@
      "data": {
       "text/plain": [
        "1 'mpfr' number of precision  128   bits \n",
-       "[1] 4.252880674352681467098591383546590805054"
+       "[1] 0.09099230808282256222074835250168689526618"
       ]
      },
      "metadata": {},
@@ -102,7 +102,7 @@
      "data": {
       "text/plain": [
        "1 'mpfr' number of precision  333   bits \n",
-       "[1] 4.2528806743526814670985913835465908050537109375"
+       "[1] 0.09099230808282256222074835250168689526617527008056640625"
       ]
      },
      "metadata": {},
@@ -119,7 +119,7 @@
      "data": {
       "text/plain": [
        "# A float32 vector: 1\n",
-       "[1] 4.2529"
+       "[1] 0.090992"
       ]
      },
      "metadata": {},
@@ -135,16 +135,16 @@
     {
      "data": {
       "text/html": [
-       "32.6824697298858"
+       "350431975154361"
       ],
       "text/latex": [
-       "32.6824697298858"
+       "350431975154361"
       ],
       "text/markdown": [
-       "32.6824697298858"
+       "350431975154361"
       ],
       "text/plain": [
-       "[1] 32.68247"
+       "[1] 3.50432e+14"
       ]
      },
      "metadata": {},
@@ -160,16 +160,16 @@
     {
      "data": {
       "text/html": [
-       "33"
+       "350431975154361"
       ],
       "text/latex": [
-       "33"
+       "350431975154361"
       ],
       "text/markdown": [
-       "33"
+       "350431975154361"
       ],
       "text/plain": [
-       "[1] 33"
+       "[1] 3.50432e+14"
       ]
      },
      "metadata": {},
@@ -212,7 +212,7 @@
      "data": {
       "text/plain": [
        "1 'mpfr' number of precision  128   bits \n",
-       "[1] 32.68246972988583110009130905382335186005"
+       "[1] 350431975154360.875"
       ]
      },
      "metadata": {},
@@ -222,7 +222,7 @@
      "data": {
       "text/plain": [
        "1 'mpfr' number of precision  333   bits \n",
-       "[1] 32.68246972988583110009130905382335186004638671875"
+       "[1] 350431975154360.875"
       ]
      },
      "metadata": {},
@@ -239,7 +239,7 @@
      "data": {
       "text/plain": [
        "# A float32 vector: 1\n",
-       "[1] 32.682"
+       "[1] 3.5043e+14"
       ]
      },
      "metadata": {},
@@ -253,8 +253,8 @@
     "genomes=read.csv(\"genomes.csv\")\n",
     "z = lm(genomes$GC ~ genomes$size)\n",
     "#head(genomes)\n",
-    "y=genomes$GC\n",
-    "x=genomes$size\n",
+    "y1=log(genomes$GC)\n",
+    "x1=genomes$size\n",
     "s = function(x, y){\n",
     "  mean_x = mean(x)\n",
     "  mean_y = mean(y)\n",
@@ -275,6 +275,15 @@
     "  return(x)\n",
     "  \n",
     "}\n",
+    "convert = function(z){\n",
+    "    c = z*(10**14)\n",
+    "    return(c)\n",
+    "}\n",
+    "\n",
+    "x = convert(x1)\n",
+    "y = convert(y1)\n",
+    "\n",
+    "\n",
     "my_size = s(x,y)\n",
     "my_intercept = intercept(x,y, my_size)\n",
     "my_R2 = R2(x,y)\n",
@@ -303,6 +312,24 @@
     "\n",
     "#print('my_r2:')\n",
     "#my_R2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wartość estymatora największa jest dla funkcji mpfr z ustawioną precyzją na 333 dla b0:0.09099230808282253446517273687277338467538356781005859375 a dla b1 wartość estymatora jest największa dla funkcji mpfr: 350431975154360.875\n",
+    "\n",
+    "Wartość estymatora najmniejsza jest dla funkcji float dla b0 wynosi: 0.090992 oraz dla b1:3.5043e+14\n",
+    "\n",
+    "Różnice pomiędzy wartościami: polegają na zaokrąglaniu liczb,użyte funkcje są bardziej precyzyjne."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Liniowa regresja z użyciem funkcji lm:"
    ]
   },
   {
